remove business logic from router
