# src/routes/index.ts
@@ -1,5 +1,5 @@
 import express from 'express';
-import { getUsers, postTransaction, postResetDb, postTransfer } from '../controllers';
+import { getAccount, postTransaction, postResetDb, postTransfer } from '../controllers';
 import bodyParser from 'body-parser';
 import swaggerUi from 'swagger-ui-express';
 import swaggerDocument from '../swagger/swagger.json';
@@ -9,7 +9,7 @@ export const router = express.Router();
 router.use('/docs', swaggerUi.serve);
 router.get('/docs', swaggerUi.setup(swaggerDocument));
 
-router.get('/users', getUsers);
+router.get('/accounts', getAccount);
 router.post('/transactions', jsonParser, postTransaction);
 router.post('/resetDb', postResetDb);
 router.post('/transfers', jsonParser, postTransfer);
